syntax = "proto3";

package protos;

import "messages.proto";

service Usuario {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc ObtemUsuario (UsuarioRequest) returns (UsuarioResponse);
  rpc VerificarSessao (VerificarSessaoRequest) returns (VerificarSessaoResponse);
  // rpc ObtemListaUsuarios (UsuarioRequest) returns (ListaUsuariosResponse);
  // rpc AtualizarUsuario (UsuarioRequest) returns (AlteracaoUsuarioResponse);
  // rpc CriarUsuario (UsuarioRequest) returns (AlteracaoUsuarioResponse);
  // rpc DeletarUsuario (UsuarioRequest) returns (AlteracaoUsuarioResponse);
  // rpc AlternarStatusUsuario (UsuarioRequest) returns (AlteracaoUsuarioResponse);
}
